Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNjUdDBkWPdGfxEZFrXBnvl",
+      "authorship_tag": "ABX9TyPChIjn2iM5exF7PCCweice",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3334,12 +3334,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AjlVo4zBCGgy",
-        "outputId": "2c09bae0-46a1-4950-caa1-d9bb809137c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
-        }
+        },
+        "id": "AjlVo4zBCGgy",
+        "outputId": "2c09bae0-46a1-4950-caa1-d9bb809137c4"
       },
       "source": [
         "# child combinator\n",
@@ -3391,12 +3391,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G6byIPoHDHUz",
-        "outputId": "5f1068c2-2485-4507-bb00-fdf6cec4dfb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 144
-        }
+        },
+        "id": "G6byIPoHDHUz",
+        "outputId": "5f1068c2-2485-4507-bb00-fdf6cec4dfb7"
       },
       "source": [
         "# adjacent sibling combinator\n",
@@ -3454,12 +3454,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j0umsfHqDjZt",
-        "outputId": "1b4fdcd1-a998-49f8-80f4-0a91606a3c18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 164
-        }
+        },
+        "id": "j0umsfHqDjZt",
+        "outputId": "1b4fdcd1-a998-49f8-80f4-0a91606a3c18"
       },
       "source": [
         "# general sibling combinator\n",
@@ -3517,6 +3517,593 @@
       },
       "source": [
         "# ボックスモデル"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wX84lP-jSwzr",
+        "outputId": "4041656c-43a5-4090-80b9-e6ccb2717ffc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 217
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    p,\n",
+        "    ul {\n",
+        "        border: 2px solid rebeccapurple;\n",
+        "        padding: .5em;\n",
+        "    }\n",
+        "\n",
+        "    .block,\n",
+        "    li {\n",
+        "        border: 2px solid blue;\n",
+        "        padding: .5em;\n",
+        "    }\n",
+        "\n",
+        "    ul {\n",
+        "        display: flex;\n",
+        "        list-style: none;\n",
+        "    }\n",
+        "\n",
+        "    .block {\n",
+        "        display: block;\n",
+        "    }\n",
+        "</style>\n",
+        "<p>I am a paragraph. A short one.</p>\n",
+        "<ul>\n",
+        "    <li>Item One</li>\n",
+        "    <li>Item Two</li>\n",
+        "    <li>Item Three</li>\n",
+        "</ul>\n",
+        "<p>I am another paragraph. Some of the <span class=\"block\">words</span> have been wrapped in a <span>span\n",
+        "        element</span>.</p>"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    p,\n",
+              "    ul {\n",
+              "        border: 2px solid rebeccapurple;\n",
+              "        padding: .5em;\n",
+              "    }\n",
+              "\n",
+              "    .block,\n",
+              "    li {\n",
+              "        border: 2px solid blue;\n",
+              "        padding: .5em;\n",
+              "    }\n",
+              "\n",
+              "    ul {\n",
+              "        display: flex;\n",
+              "        list-style: none;\n",
+              "    }\n",
+              "\n",
+              "    .block {\n",
+              "        display: block;\n",
+              "    }\n",
+              "</style>\n",
+              "<p>I am a paragraph. A short one.</p>\n",
+              "<ul>\n",
+              "    <li>Item One</li>\n",
+              "    <li>Item Two</li>\n",
+              "    <li>Item Three</li>\n",
+              "</ul>\n",
+              "<p>I am another paragraph. Some of the <span class=\"block\">words</span> have been wrapped in a <span>span\n",
+              "        element</span>.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "URkmmoAYURo_",
+        "outputId": "c8dec12b-d813-4a65-9c21-46c6ff03e4a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    p,\n",
+        "    ul {\n",
+        "        border: 2px solid rebeccapurple;\n",
+        "    }\n",
+        "\n",
+        "    span,\n",
+        "    li {\n",
+        "        border: 2px solid blue;\n",
+        "    }\n",
+        "\n",
+        "    ul {\n",
+        "        display: inline-flex;\n",
+        "        list-style: none;\n",
+        "        padding: 0;\n",
+        "    }\n",
+        "\n",
+        "    .inline {\n",
+        "        display: inline;\n",
+        "    }\n",
+        "</style>\n",
+        "<p>\n",
+        "    I am a paragraph. Some of the\n",
+        "    <span>words</span> have been wrapped in a\n",
+        "    <span>span element</span>.\n",
+        "</p>\n",
+        "<ul>\n",
+        "    <li>Item One</li>\n",
+        "    <li>Item Two</li>\n",
+        "    <li>Item Three</li>\n",
+        "</ul>\n",
+        "<p class=\"inline\">I am a paragraph. A short one.</p>\n",
+        "<p class=\"inline\">I am another paragraph. Also a short one.</p>"
+      ],
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    p,\n",
+              "    ul {\n",
+              "        border: 2px solid rebeccapurple;\n",
+              "    }\n",
+              "\n",
+              "    span,\n",
+              "    li {\n",
+              "        border: 2px solid blue;\n",
+              "    }\n",
+              "\n",
+              "    ul {\n",
+              "        display: inline-flex;\n",
+              "        list-style: none;\n",
+              "        padding: 0;\n",
+              "    }\n",
+              "\n",
+              "    .inline {\n",
+              "        display: inline;\n",
+              "    }\n",
+              "</style>\n",
+              "<p>\n",
+              "    I am a paragraph. Some of the\n",
+              "    <span>words</span> have been wrapped in a\n",
+              "    <span>span element</span>.\n",
+              "</p>\n",
+              "<ul>\n",
+              "    <li>Item One</li>\n",
+              "    <li>Item Two</li>\n",
+              "    <li>Item Three</li>\n",
+              "</ul>\n",
+              "<p class=\"inline\">I am a paragraph. A short one.</p>\n",
+              "<p class=\"inline\">I am another paragraph. Also a short one.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Uae0vy_-eB9D"
+      },
+      "source": [
+        "# 代替ボックスモデル"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "txOB8_CJeGLv"
+      },
+      "source": [
+        "%%script false\n",
+        "html {\n",
+        "  box-sizing: border-box;\n",
+        "}\n",
+        "*, *::before, *::after {\n",
+        "  box-sizing: inherit;\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LaELwmt7elh5",
+        "outputId": "b963a98b-4b4f-463a-8979-35ee3d60c729",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 497
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    .box {\n",
+        "        border: 5px solid rebeccapurple;\n",
+        "        background-color: lightgray;\n",
+        "        padding: 40px;\n",
+        "        margin: 0px 40px 0px 40px;\n",
+        "        width: 300px;\n",
+        "        height: 150px;\n",
+        "    }\n",
+        "\n",
+        "    .alternate {\n",
+        "        box-sizing: border-box;\n",
+        "        padding: 40px;\n",
+        "        margin: 0px 40px 0px 40px;\n",
+        "        width: 390px;\n",
+        "        height: 240px;\n",
+        "    }\n",
+        "</style>\n",
+        "\n",
+        "<div class=\"box\">I use the standard box model.</div>\n",
+        "<div class=\"box alternate\">I use the alternate box model.</div>"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        border: 5px solid rebeccapurple;\n",
+              "        background-color: lightgray;\n",
+              "        padding: 40px;\n",
+              "        margin: 0px 40px 0px 40px;\n",
+              "        width: 300px;\n",
+              "        height: 150px;\n",
+              "    }\n",
+              "\n",
+              "    .alternate {\n",
+              "        box-sizing: border-box;\n",
+              "        padding: 40px;\n",
+              "        margin: 0px 40px 0px 40px;\n",
+              "        width: 390px;\n",
+              "        height: 240px;\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<div class=\"box\">I use the standard box model.</div>\n",
+              "<div class=\"box alternate\">I use the alternate box model.</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n62JKSDQgFrY",
+        "outputId": "67b2c015-cd1a-4f58-8580-2b621b9c8af1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 314
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    .container {\n",
+        "        border: 5px solid blue;\n",
+        "        width: 600px;\n",
+        "        height: 200px;\n",
+        "    }\n",
+        "\n",
+        "    .box {\n",
+        "        width: 300px;\n",
+        "        height: 180px;\n",
+        "        /* margin-top: -40px;\n",
+        "        margin-right: 30px;\n",
+        "        margin-bottom: 40px;\n",
+        "        margin-left: 4em; */\n",
+        "        margin: auto;\n",
+        "        margin-top: -40px;\n",
+        "        border: 5px solid rebeccapurple;\n",
+        "        background-color: lightgray;\n",
+        "    }\n",
+        "</style>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "\n",
+        "\n",
+        "<div class=\"container\">\n",
+        "    <div class=\"box\">Change my margin.</div>\n",
+        "</div>"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .container {\n",
+              "        border: 5px solid blue;\n",
+              "        width: 600px;\n",
+              "        height: 200px;\n",
+              "    }\n",
+              "\n",
+              "    .box {\n",
+              "        width: 300px;\n",
+              "        height: 180px;\n",
+              "        /* margin-top: -40px;\n",
+              "        margin-right: 30px;\n",
+              "        margin-bottom: 40px;\n",
+              "        margin-left: 4em; */\n",
+              "        margin: auto;\n",
+              "        margin-top: -40px;\n",
+              "        border: 5px solid rebeccapurple;\n",
+              "        background-color: lightgray;\n",
+              "    }\n",
+              "</style>\n",
+              "<br>\n",
+              "<br>\n",
+              "<br>\n",
+              "<br>\n",
+              "<br>\n",
+              "\n",
+              "\n",
+              "<div class=\"container\">\n",
+              "    <div class=\"box\">Change my margin.</div>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "URvY30gYjfWp",
+        "outputId": "793ffa53-d4db-4353-85db-34af23aa5ddb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 212
+        }
+      },
+      "source": [
+        "# マージンの相殺\n",
+        "%%html\n",
+        "<style>\n",
+        "    .container {\n",
+        "        border: 5px solid blue;\n",
+        "    }\n",
+        "    p {\n",
+        "        border: 5px solid rebeccapurple;\n",
+        "        background: lightgrey;\n",
+        "    }\n",
+        "    .one {\n",
+        "        margin-top: 30px;\n",
+        "        margin-bottom: 50px;\n",
+        "    }\n",
+        "\n",
+        "    .two {\n",
+        "        margin-top: 50px;\n",
+        "        margin-bottom: 50px;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"container\">\n",
+        "    <p class=\"one\">I am paragraph one.</p>\n",
+        "    <p class=\"two\">I am paragraph two.</p>\n",
+        "</div>"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .container {\n",
+              "        border: 5px solid blue;\n",
+              "    }\n",
+              "    p {\n",
+              "        border: 5px solid rebeccapurple;\n",
+              "        background: lightgrey;\n",
+              "    }\n",
+              "    .one {\n",
+              "        margin-top: 30px;\n",
+              "        margin-bottom: 50px;\n",
+              "    }\n",
+              "\n",
+              "    .two {\n",
+              "        margin-top: 50px;\n",
+              "        margin-bottom: 50px;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"container\">\n",
+              "    <p class=\"one\">I am paragraph one.</p>\n",
+              "    <p class=\"two\">I am paragraph two.</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "naJ6DVJNokne",
+        "outputId": "ca99f65d-9cf0-4862-86b5-54e17c41a8f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    .container {\n",
+        "        border-top: 5px dotted green;\n",
+        "        border-right: 100px solid black;\n",
+        "        border-bottom: 20px double rgb(23, 45, 145);\n",
+        "    }\n",
+        "\n",
+        "    .box {\n",
+        "        border: 10px solid #333333;\n",
+        "        border-top-style: dotted;\n",
+        "        border-right-width: 20px;\n",
+        "        border-bottom-color: hotpink;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"container\">\n",
+        "    <div class=\"box\">Change my borders.</div>\n",
+        "</div>"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .container {\n",
+              "        border-top: 5px dotted green;\n",
+              "        border-right: 100px solid black;\n",
+              "        border-bottom: 20px double rgb(23, 45, 145);\n",
+              "    }\n",
+              "\n",
+              "    .box {\n",
+              "        border: 10px solid #333333;\n",
+              "        border-top-style: dotted;\n",
+              "        border-right-width: 20px;\n",
+              "        border-bottom-color: hotpink;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"container\">\n",
+              "    <div class=\"box\">Change my borders.</div>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kB4jTT4kpv7g",
+        "outputId": "02d9c2a8-7c0f-4a72-c4fe-028dabb57271",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 155
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    .container {\n",
+        "        border: 5px solid skyblue;\n",
+        "    }\n",
+        "    .box {\n",
+        "        border: 5px solid rebeccapurple;\n",
+        "    }\n",
+        "    .box {\n",
+        "        padding-top: 20px;\n",
+        "        padding-right: 30px;\n",
+        "        padding-bottom: 40px;\n",
+        "        padding-left: 4em;\n",
+        "    }\n",
+        "\n",
+        "    .container {\n",
+        "        padding: 20px;\n",
+        "    }\n",
+        "</style>\n",
+        "\n",
+        "<div class=\"container\">\n",
+        "    <div class=\"box\">Change my padding.</div>\n",
+        "</div>"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .container {\n",
+              "        border: 5px solid skyblue;\n",
+              "    }\n",
+              "    .box {\n",
+              "        border: 5px solid rebeccapurple;\n",
+              "    }\n",
+              "    .box {\n",
+              "        padding-top: 20px;\n",
+              "        padding-right: 30px;\n",
+              "        padding-bottom: 40px;\n",
+              "        padding-left: 4em;\n",
+              "    }\n",
+              "\n",
+              "    .container {\n",
+              "        padding: 20px;\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<div class=\"container\">\n",
+              "    <div class=\"box\">Change my padding.</div>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
