Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPChIjn2iM5exF7PCCweice",
+      "authorship_tag": "ABX9TyPqrEZl+i6ikhhD+aopAO/I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3358,7 +3358,7 @@
         "        </ol>\n",
         "    </li>"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3418,7 +3418,7 @@
         "        greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>\n",
         "</article>"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3479,7 +3479,7 @@
         "    <p>I am another paragraph.</p>\n",
         "</article>"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3523,11 +3523,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "wX84lP-jSwzr",
-        "outputId": "4041656c-43a5-4090-80b9-e6ccb2717ffc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        }
+        },
+        "outputId": "4041656c-43a5-4090-80b9-e6ccb2717ffc"
       },
       "source": [
         "%%html\n",
@@ -3562,7 +3562,7 @@
         "<p>I am another paragraph. Some of the <span class=\"block\">words</span> have been wrapped in a <span>span\n",
         "        element</span>.</p>"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3613,11 +3613,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "URkmmoAYURo_",
-        "outputId": "c8dec12b-d813-4a65-9c21-46c6ff03e4a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        }
+        },
+        "outputId": "c8dec12b-d813-4a65-9c21-46c6ff03e4a3"
       },
       "source": [
         "%%html\n",
@@ -3655,7 +3655,7 @@
         "<p class=\"inline\">I am a paragraph. A short one.</p>\n",
         "<p class=\"inline\">I am another paragraph. Also a short one.</p>"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3720,6 +3720,7 @@
         "id": "txOB8_CJeGLv"
       },
       "source": [
+        "# 以下のようにすれば、すべてが代替ボックスモデルにかわるが、やらない方がよさそう。 なぜなら普通ではないから。\n",
         "%%script false\n",
         "html {\n",
         "  box-sizing: border-box;\n",
@@ -3735,13 +3736,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "LaELwmt7elh5",
-        "outputId": "b963a98b-4b4f-463a-8979-35ee3d60c729",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        }
+        },
+        "outputId": "b963a98b-4b4f-463a-8979-35ee3d60c729"
       },
       "source": [
+        "# alternate が代替ボックスモデルで、普通のボックスモデルとサイズを合わせるにはpaddingとボーダーの幅を足す。\n",
         "%%html\n",
         "<style>\n",
         "    .box {\n",
@@ -3765,7 +3767,7 @@
         "<div class=\"box\">I use the standard box model.</div>\n",
         "<div class=\"box alternate\">I use the alternate box model.</div>"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3807,13 +3809,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "n62JKSDQgFrY",
-        "outputId": "67b2c015-cd1a-4f58-8580-2b621b9c8af1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 314
-        }
+        },
+        "outputId": "13e7bfd4-32da-4bc7-a1d2-4dcf8fe5128c"
       },
       "source": [
+        "# マイナスマージンがどうなるか\n",
         "%%html\n",
         "<style>\n",
         "    .container {\n",
@@ -3841,12 +3844,11 @@
         "<br>\n",
         "<br>\n",
         "\n",
-        "\n",
         "<div class=\"container\">\n",
         "    <div class=\"box\">Change my margin.</div>\n",
         "</div>"
       ],
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3878,7 +3880,6 @@
               "<br>\n",
               "<br>\n",
               "\n",
-              "\n",
               "<div class=\"container\">\n",
               "    <div class=\"box\">Change my margin.</div>\n",
               "</div>"
@@ -3897,11 +3898,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "URvY30gYjfWp",
-        "outputId": "793ffa53-d4db-4353-85db-34af23aa5ddb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 212
-        }
+        },
+        "outputId": "5f4f546a-6507-4427-a260-a9f94116dacd"
       },
       "source": [
         "# マージンの相殺\n",
@@ -3929,7 +3930,7 @@
         "    <p class=\"two\">I am paragraph two.</p>\n",
         "</div>"
       ],
-      "execution_count": 47,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3972,11 +3973,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "naJ6DVJNokne",
-        "outputId": "ca99f65d-9cf0-4862-86b5-54e17c41a8f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "outputId": "ca99f65d-9cf0-4862-86b5-54e17c41a8f7"
       },
       "source": [
         "%%html\n",
@@ -3998,7 +3999,7 @@
         "    <div class=\"box\">Change my borders.</div>\n",
         "</div>"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4036,11 +4037,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "kB4jTT4kpv7g",
-        "outputId": "02d9c2a8-7c0f-4a72-c4fe-028dabb57271",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 155
-        }
+        },
+        "outputId": "02d9c2a8-7c0f-4a72-c4fe-028dabb57271"
       },
       "source": [
         "%%html\n",
@@ -4067,7 +4068,7 @@
         "    <div class=\"box\">Change my padding.</div>\n",
         "</div>"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4095,6 +4096,70 @@
               "<div class=\"container\">\n",
               "    <div class=\"box\">Change my padding.</div>\n",
               "</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "proNZpvllh58",
+        "outputId": "4ed20573-e2bc-4b60-a050-b518b3aa9d38",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    span#span {\n",
+        "        margin: 20px;\n",
+        "        padding: 20px;\n",
+        "        width: 80px;\n",
+        "        height: 50px;\n",
+        "        background-color: lightblue;\n",
+        "        border: 2px solid blue;\n",
+        "    }\n",
+        "</style>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "<p>\n",
+        "    I am a paragraph and this is a <span id=\"span\">span</span> inside that paragraph. A span is an inline element and so does not\n",
+        "    respect width and height.\n",
+        "</p>\n"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    span#span {\n",
+              "        margin: 20px;\n",
+              "        padding: 20px;\n",
+              "        width: 80px;\n",
+              "        height: 50px;\n",
+              "        background-color: lightblue;\n",
+              "        border: 2px solid blue;\n",
+              "    }\n",
+              "</style>\n",
+              "<br>\n",
+              "<br>\n",
+              "<br>\n",
+              "<p>\n",
+              "    I am a paragraph and this is a <span id=\"span\">span</span> inside that paragraph. A span is an inline element and so does not\n",
+              "    respect width and height.\n",
+              "</p>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
